# recu-svp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  logging_utils.py  main.py
app/application/ports/: ai.py  documents.py  repositories.py
app/application/services/: antecedent_resolver.py  concatenation_engine.py  pattern_fragment_builder.py  rule_resolver.py
app/application/use_cases/: analyze_auto_use_case.py
app/domain/: models.py
app/infrastructure/ai/: console_pretty.py  openai_client_service.py  openai_router.py  prompts.py  validators.py
app/infrastructure/db/: repositories.py  session.py
app/infrastructure/documents/: __init__.py  pdf_extractor.py
app/interfaces/: __init__.py
app/interfaces/http/: __init__.py
app/interfaces/http/v2/: __init__.py  dependencies.py  routes.py  schemas.py
docs/: JUDICIAL_INTEGRATION_V2.md  MANUAL_TEST_SWAGGER_8002.md
recu_svp_nuevo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/contract/: test_analyze_auto_contract.py
tests/unit/: test_ai_validators.py  test_analyze_auto_use_case.py  test_concatenation_engine.py  test_logging_utils.py  test_openai_client_service.py  test_openai_router.py  test_pattern_fragment_builder.py  test_pdf_extractor.py  test_rule_resolver.py
