[project]
name = "recu-svp-nuevo"
version = "0.1.0"
description = "Microservicio SVP v2 para análisis de autos y poblamiento de actuaciones."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
  "psycopg2-binary>=2.9.10",
  "httpx>=0.28.1",
  "openai>=1.108.1",
  "python-dotenv>=1.1.1",
  "pypdf>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "mypy>=1.17.1",
  "ruff>=0.12.10",
  "black>=25.1.0",
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["tests"]
